# Openmw-Bumpmap-Translator

./: Cargo.toml  readme.md
.github/workflows/: build.yml
src/: main.rs
